--- a/src/index.html
+++ b/src/index.html
@@ -10,16 +10,16 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
   <script src="https://apis.google.com/js/platform.js" async defer></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <!-- <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/> -->
 </head>
 
 <body>
-  <div class="b">
     <!-- <audio src="/src/assets/music/bg_music.mp3">
       <p>If you are reading this, it is because your browser does not support the audio element.     </p>
     </audio> -->
   <app-root></app-root>
-  </div>
 </body>
 </html>
