Changed the path of assets

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <base href="/gameplay">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="/src/assets/img/favicon.jpg">
+  <link rel="icon" type="image/x-icon" href="./assets/img/favicon.jpg">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
   <script src="https://apis.google.com/js/platform.js" async defer></script>
@@ -20,7 +20,7 @@
     <!-- <audio src="/src/assets/music/bg_music.mp3">
       <p>If you are reading this, it is because your browser does not support the audio element.     </p>
     </audio> -->
-    
+
   <app-root></app-root>
 </body>
 </html>
